--- a/local.properties
+++ b/local.properties
@@ -9,6 +9,6 @@
 # header note.
 sdk.dir=C\:\\Users\\Rihila Sumayya\\AppData\\Local\\Android\\Sdk
 
-API_KEY=AIzaSyC9TdV3w6aGAbJ6Gp2t5Da3K5Y2p0IToi4
+API_KEY=
 
 
